--- a/paper/tex/applications.tex
+++ b/paper/tex/applications.tex
@@ -41,7 +41,7 @@ where $\Delta x_{min}$ is the size of the smallest cell of the forest. The gener
 
 \subsection{Scalability}
 
-The implementation of the Stefan problem relies on the components described in the previous sections, and it is therefore a good synthesis of the performance of the various algorithms. We monitored the performance of the code over five time iterations, as presented in Algorithm \ref{alg:stefan}, for two different maximum resolutions. In both cases, the forest is built on a $20\times20\times20$ macro-mesh. The maximum tree resolution for the small test is 9, leading to approximately 7M grid points, and the maximum resolution for the large test is 11, corresponding to 105M grid points. The results are presented in figure \ref{fig:stefan_scaling}. As expected from the results obtained for each component in the previous sections, our implementation of the Stefan problem exhibits very satisfactory scaling (c.f.\ table \ref{tab:scaling_stefan}).
+The implementation of the Stefan problem relies on the components described in the previous sections, and it is therefore a good synthesis of the performance of the various algorithms. We monitored the performance of the code over five time iterations, as presented in Algorithm \ref{alg:stefan}, for two different maximum resolutions. In both cases, the forest is built on a $20\times20\times20$ macro-mesh. The maximum tree resolution for the small test is 9, leading to approximately 7M grid points, and the maximum resolution for the large test is 11, corresponding to 105M grid points. The results are presented in figure \ref{fig:stefan_scaling}. As expected from the results obtained for each component in the previous sections, our implementation of the Stefan problem exhibits very satisfactory scaling (cf.\ Table \ref{tab:scaling_stefan}).
 
 \begin{figure}
 \centering
