Carsten's comments addressed.

--- a/paper/tex/abstract.tex
+++ b/paper/tex/abstract.tex
@@ -15,7 +15,7 @@ Moreover, we present a simple parallel reinitialization scheme using the
 pseudo-time transient formulation. Both parallel algorithms scale on the
 Stampede supercomputer,
 % where we are limited to 4096 cores currently.
-where we are currently using up to 4096 CPU cores.
+where we are currently using up to 4096 CPU cores, the limit of our current account.
 Finally, a relevant application of the algorithms is presented in modeling a
 crystallization phenomenon by solving a Stefan problem, illustrating a level of
 detail that would be impossible to achieve without a parallel adaptive
