--- a/paper/tex/applications.tex
+++ b/paper/tex/applications.tex
@@ -20,7 +20,9 @@ We choose to use an adaptive time step with a $\text{CFL} = 5$, i.e.
 \begin{equation} \label{eq:stefan_dt}
 \Delta t = 5 ~ \Delta x_{min} ~ \min(1,1/\max \lVert \underline{\mathbf{u}} \rVert),
 \end{equation}
-where $\Delta x_{min}$ is the size of the smallest cell of the forest. The general procedure to solve the Stefan problem is presented in Algorithm \ref{alg:stefan}.
+where $\Delta x_{min}$ is the size of the smallest cell of the forest. The general procedure to solve the Stefan problem is presented in Algorithm \ref{alg:stefan} and we refer the interested reader to \cite{Chen;Min;Gibou:09:A-numerical-scheme-f} for the details of implementation. In implementing the numerical solver, we make use of the popular \texttt{PETSc}
+\cite{Balay;Abhyankar;Adams;etal:14:PETSc-Web-page} library for linear algebra and its parallel primitives, such as parallel ghosted vector and scatter/gather operations, which simplifies the implementation.
+
 
 \begin{algorithm}[htbp]
 \caption{$\texttt{General procedure for solving the Stefan problem}$}
@@ -41,7 +43,7 @@ where $\Delta x_{min}$ is the size of the smallest cell of the forest. The gener
 
 \subsection{Scalability}
 
-The implementation of the Stefan problem relies on the components described in the previous sections, and it is therefore a good synthesis of the performance of the various algorithms. We monitored the performance of the code over five time iterations, as presented in Algorithm \ref{alg:stefan}, for two different maximum resolutions. In both cases, the forest is built on a $20\times20\times20$ macro-mesh. The maximum tree resolution for the small test is 9, leading to approximately 7M grid points, and the maximum resolution for the large test is 11, corresponding to 105M grid points. The results are presented in figure \ref{fig:stefan_scaling}. As expected from the results obtained for each component in the previous sections, our implementation of the Stefan problem exhibits very satisfactory scaling (cf.\ Table \ref{tab:scaling_stefan}).
+The implementation of the Stefan problem relies on the components described in the previous sections, and it is therefore a good synthesis of the performance of the various algorithms. We monitored the performance of the code over five time iterations, as presented in Algorithm \ref{alg:stefan}, for two different maximum resolutions. In both cases, the forest is built on a $20\times20\times20$ macro-mesh. The maximum tree resolution for the small test is 9, leading to approximately 7M grid points, and the maximum resolution for the large test is 11, corresponding to 105M grid points. The results are presented in figure \ref{fig:stefan_scaling}, where ``\verb|Solution_Extension|'' refers to extrapolation procedure (see Algorithm \ref{alg:stefan} step 5). As expected from the results obtained for each component in the previous sections, our implementation of the Stefan problem exhibits very satisfactory scaling (cf.\ Table \ref{tab:scaling_stefan}).
 
 \begin{figure}
 \centering
